6/23 valid anagram + repo cleanup

--- a/NeetCode/A. Arrays & Hasing/1.[easy]contains_duplicates.ipynb
+++ b/NeetCode/A. Arrays & Hasing/1.[easy]contains_duplicates.ipynb
@@ -143,21 +143,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Brute Force O(n2)"
+    "### Brute Force Time = O(n2) | Space = O(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\ndouble for-loop. for the every int in nums, iterate through every other nums to see if there is a duplicate\\n\\nwe can heavily improve on this because the sample space that we're checking is so large\\n\""
+       "\"\\ndouble for-loop. for the every int in nums, iterate through every other nums to see if there is a duplicate\\n\\nwe can heavily improve on this because the sample space that we're checking is so large\\n\\nno extra memory is needed, so O(1)\\n\""
       ]
      },
-     "execution_count": 22,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,6 +167,8 @@
     "double for-loop. for the every int in nums, iterate through every other nums to see if there is a duplicate\n",
     "\n",
     "we can heavily improve on this because the sample space that we're checking is so large\n",
+    "\n",
+    "no extra memory is needed, so O(1)\n",
     "'''"
    ]
   },
@@ -174,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Faster Solution O(nlogn)"
+    "### Faster Solution Time = O(nlogn) | Space = O(1)"
    ]
   },
   {
@@ -202,6 +204,8 @@
     "then, iterate through the list O(n), checking to see if current int is the same as as the next int. the moment they match, return the value.\n",
     "\n",
     "this reduces our search space to only O(n), but we spend O(nlogn) time sorting it. can still be improved\n",
+    "\n",
+    "the sort is \"inplace\" and thus, we don't need any extra memory\n",
     "'''"
    ]
   },
@@ -209,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fastest Solution O(n), all cases is O(n)"
+    "### Fastest Solution Time = O(n), all cases is O(n) | Space = O(n)"
    ]
   },
   {
@@ -241,6 +245,8 @@
     "firstly, this strategy removes the nlogn sort time.\n",
     "next, we can transform the array (using O(n) time) into another structure that gives us insight\n",
     "lastly, we can reduce our search time to O(1) when we compare the lengths of these structures\n",
+    "\n",
+    "regarding memory, we need to create the set, so we'll use O(n) extra memory worst case, and best case is just O(1) -> eg [1,1,1,1,1,1,1,1]\n",
     "'''"
    ]
   },
@@ -299,6 +305,8 @@
     "the issue with the above solution is that it will always recreate the set, which in turn will always take O(n) runtime.\n",
     "\n",
     "we can improve upon this manually coding the creation of the set ourselves. this way, we can add an early break in the code if we identify a duplicate before the entire completion of the set\n",
+    "\n",
+    "the memory remains the same as the above\n",
     "'''"
    ]
   },
