--- a/1. NeetCode/A. Arrays & Hasing/0.[]skeleton.ipynb
+++ b/1. NeetCode/A. Arrays & Hasing/0.[]skeleton.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Group Anagrams"
+    "# d"
    ]
   },
   {
@@ -25,7 +25,7 @@
    ],
    "source": [
     "'''\n",
-    "Difficulty: Medium\n",
+    "Difficulty: \n",
     "'''"
    ]
   },
@@ -54,26 +54,7 @@
    ],
    "source": [
     "'''\n",
-    "Given an array of strings strs, group the anagrams together. You can return the answer in any order.\n",
     "\n",
-    "An Anagram is a word or phrase formed by rearranging the letters of a different word or phrase, typically using all the original letters exactly once.\n",
-    "\n",
-    "Example 1:\n",
-    "Input: strs = [\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"]\n",
-    "Output: [[\"bat\"],[\"nat\",\"tan\"],[\"ate\",\"eat\",\"tea\"]]\n",
-    "\n",
-    "Example 2:\n",
-    "Input: strs = [\"\"]\n",
-    "Output: [[\"\"]]\n",
-    "\n",
-    "Example 3:\n",
-    "Input: strs = [\"a\"]\n",
-    "Output: [[\"a\"]]\n",
-    " \n",
-    "Constraints:\n",
-    "1 <= strs.length <= 104\n",
-    "0 <= strs[i].length <= 100\n",
-    "strs[i] consists of lowercase English letters.\n",
     "'''"
    ]
   },
@@ -102,17 +83,7 @@
    ],
    "source": [
     "'''\n",
-    "Example 1:\n",
-    "Input: strs = [\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"]\n",
-    "Output: [[\"bat\"],[\"nat\",\"tan\"],[\"ate\",\"eat\",\"tea\"]]\n",
     "\n",
-    "Example 2:\n",
-    "Input: strs = [\"\"]\n",
-    "Output: [[\"\"]]\n",
-    "\n",
-    "Example 3:\n",
-    "Input: strs = [\"a\"]\n",
-    "Output: [[\"a\"]]\n",
     "'''"
    ]
   },
@@ -128,11 +99,7 @@
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "strs1 = [\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"]\n",
-    "strs2 = [\"\"]\n",
-    "strs3 = [\"a\"]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -142,21 +109,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NOTE, this problem statement builds upon a previously completed problem here:\n",
-    "# https://github.com/cdenq/my-coding-platforms/blob/main/NeetCode/A.%20Arrays%20%26%20Hasing/2.%5Beasy%5Dvalid_anagram.ipynb\n",
-    "# solution explanations are derived from an understanding of that first problem."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Brute Force Time = O(m*n2) | Space = O(1)"
+    "### Brute Force Time = O() | Space = O(1)"
    ]
   },
   {
@@ -178,16 +134,13 @@
    "source": [
     "'''\n",
     "CONCEPT\n",
-    "    similar to the valid anagram problem, the brute force solution would be a triple for-loop:\n",
-    "    for every word in the list, for every letter in the that word, check for a bijective relationship against every other word for every letter.\n",
-    "    another way to imagine this: our base case is O(n^2), in which we check every other letter for every letter in our current word, and then we repeat this process m times for every word in the list.\n",
+    "    \n",
     "\n",
     "IMPLEMENTATION\n",
-    "    as mentioned above, we'll be using a triple for-loop to reach every letter of every word\n",
+    "\n",
     "\n",
     "ANALYSIS\n",
-    "    thus, if n is the average length of each word, and m is the length of the list of words, our runtime is O(m*n^2)\n",
-    "    since it's just a comparison, we do not use any extra memory\n",
+    "    \n",
     "'''"
    ]
   },
@@ -195,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Faster Solution Time = O(m * nlogn) | Space = O(m * n)"
+    "### Faster Solution Time = O() | Space = O(1)"
    ]
   },
   {
@@ -217,18 +170,13 @@
    "source": [
     "'''\n",
     "CONCEPT\n",
-    "    recall from our previous problem statement (valid anagram), we discovered how anagrams of each other produce the same word when sorted.\n",
-    "    we can attempt a similar solution here, in which we sort every word in the list, and then group all the equivalent reults together in their own sublists.\n",
+    "    \n",
     "\n",
     "IMPLEMENTATION\n",
-    "    we'd use a single for-loop to reach every character and then sort every character, storing that newly sorted string to the side\n",
-    "    put all sorted strings into the same sublist\n",
-    "    keep a cipher on the side to track what the original unsorted word is to be able to convert (not implemented here, but implemented in the valid anagram problem)\n",
+    "\n",
     "\n",
     "ANALYSIS\n",
-    "    thus, the cost to sort each word will be nlogn, and we have m words => O(m*nlogn)\n",
-    "    because the problem statement is asking us to return the anagrams themselves, our sorting cannot actually be done in place.\n",
-    "    we'd make a sorted copy of length n for each m word, meaning our total memory cost will be O(m*n)\n",
+    "    \n",
     "'''"
    ]
   },
@@ -236,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fastest Solution Time = O(m*n) | Space = O(n)"
+    "### Fastest Solution Time = O() | Space = O()"
    ]
   },
   {
@@ -257,44 +205,14 @@
    ],
    "source": [
     "'''\n",
-    "and last but not least, building off of the dictionary solution we discovered in valid anagram, we can implement a similar solution here\n",
+    "CONCEPT\n",
+    "    \n",
     "\n",
-    "CONCEPTUALLY:\n",
-    "    instead of having a dictionary with keys of the letter, we instead want keys to be the anagram itself.\n",
+    "IMPLEMENTATION\n",
     "\n",
-    "    for example: [\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"]\n",
-    "    \"1e, 1a, 1t\" (which is the freq of letters in \"eat\") would itself be the whole key.\n",
-    "    the value to this key would be a list of the words that fit this anagram pattern.\n",
-    "\n",
-    "    thus, the idea is to spend O(n)*m to transform every word in the list into a key template and then either create a key for it in the dictionary if it doesnt exist or append it ot the list values.\n",
-    "\n",
-    "    at the end, we'd return all the values in the dictionary\n",
-    "\n",
-    "IMPLEMENTATION:\n",
-    "    so when implementing the code, there are a few roadblocks we need to consider.\n",
-    "\n",
-    "    #1 is how we actually create this \"1e, 1a, 1t\" template.\n",
-    "        well, the immediate thought here is to create a freq list of all the letters in a word. we know in the problem statement that the letters are only a-z lowercase, and thus, can create an empty freq list where each index \n",
-    "        corresponds to 26 lowercase letters a-z. in code, itd be something like this:\n",
-    "        count = [0] * 26\n",
-    "        if our word is \"adz\" for eg, then our freq would be [1,0,0,1,0,0,0,0,0,0,0,0,0,0...0,1] where the len of this list is 26.\n",
-    "\n",
-    "    #1.5 how do we match a -> index 0, b -> index 1, etc. for this freq list?\n",
-    "        we could create a cipher on the side then compare, but the most direct way would be to use the builtin ord() function\n",
-    "\n",
-    "        every ASCII letter has a correpsonding unicode integer code, which we can access via ord().\n",
-    "        for eg, \"a\" is always mapped to int 97.\n",
-    "        thus, we can take advantage of this by subtracting 97 from \"a\" to determinsticaly get the result of 0, or the first index of our freq list\n",
-    "        given any lwr case letter, we can subtract 97 from this (or equivalent, ord(\"a\")) to 'reduce' its corresponding code to the proper index of our freq list.\n",
-    "\n",
-    "        this allows us to accurately convert every \n",
-    "\n",
-    "    #2 is that python dict does not allow for lists as their keys.\n",
-    "        thus, we can convert this list to a tuple or a string, and then anytime a subsequent word's freq_list-template comes to us, we'd check to see if they were the same\n",
     "\n",
     "ANALYSIS\n",
-    "    when we transform every word, total O(m*n)\n",
-    "    the memory here would be at most O(m), because the values of the dictionary would be the entire length of the list\n",
+    "    \n",
     "'''"
    ]
   },
@@ -303,22 +221,7 @@
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def groupAnagrams(strs):\n",
-    "    dict_of_anagrams = {}\n",
-    "\n",
-    "    for word in strs:\n",
-    "        freq = [0] * 26\n",
-    "        for chr in word:\n",
-    "            index = ord(chr) - ord(\"a\") #aka -97\n",
-    "            freq[index] += 1\n",
-    "        \n",
-    "        if tuple(freq) in dict_of_anagrams.keys():\n",
-    "            dict_of_anagrams[tuple(freq)].append(word)\n",
-    "        else:\n",
-    "            dict_of_anagrams[tuple(freq)] = [word]\n",
-    "    return dict_of_anagrams.values()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -336,9 +239,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "groupAnagrams(strs1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -360,12 +261,7 @@
      ]
     }
    ],
-   "source": [
-    "print(f\"\\\n",
-    "{groupAnagrams(strs1)}\\\n",
-    "{groupAnagrams(strs2)}\\\n",
-    "{groupAnagrams(strs3)}\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
