--- a/1. NeetCode/A. Arrays & Hasing/1.[easy]contains_duplicates.ipynb
+++ b/1. NeetCode/A. Arrays & Hasing/1.[easy]contains_duplicates.ipynb
@@ -164,11 +164,16 @@
    ],
    "source": [
     "'''\n",
-    "double for-loop. for the every int in nums, iterate through every other nums to see if there is a duplicate\n",
+    "CONCEPT\n",
+    "    the naive approach would be to compare each integer with every other integer. mathematically, this means we're taking total combinations of 2 pairs of ints.\n",
+    "    nC2 = n! / 2!(n-2)! = (n * (n-1)) / 2 = (n2 - n) / 2 total combinations\n",
     "\n",
-    "we can heavily improve on this because the sample space that we're checking is so large\n",
+    "IMPLEMENTATION\n",
+    "    double for-loop. for the every int in nums, iterate through every other nums to see if there is a duplicate\n",
     "\n",
-    "no extra memory is needed, so O(1)\n",
+    "ANALYSIS\n",
+    "    since we're touching (n2 - n) / 2 total combinations, our total sample space is within class of O(n2) as a worst case\n",
+    "    no extra memory is needed, so O(1)\n",
     "'''"
    ]
   },
@@ -197,15 +202,22 @@
    ],
    "source": [
     "'''\n",
-    "sort nums O(nlogn).\n",
+    "CONCEPT\n",
+    "    we can heavily improve on this because the sample space that we're checking is so large\n",
     "\n",
-    "this ensures that duplicates will be adjacent because they are the same value\n",
+    "    one way to reduce the number of ints that we check is introduce some sort of logic in terms of the sequence in which we check things.\n",
     "\n",
-    "then, iterate through the list O(n), checking to see if current int is the same as as the next int. the moment they match, return the value.\n",
+    "    for eg. if we were to check the numbers in order, it would ensure that all the duplicates would be the adjacent to each other, and we would be able to catch those duplicates much faster\n",
     "\n",
-    "this reduces our search space to only O(n), but we spend O(nlogn) time sorting it. can still be improved\n",
+    "IMPLEMENTATION\n",
+    "    sort nums O(nlogn).\n",
     "\n",
-    "the sort is \"inplace\" and thus, we don't need any extra memory\n",
+    "    then, iterate through the list O(n), checking to see if current int is the same as as the next int. the moment they match, return the value.\n",
+    "\n",
+    "ANALYSIS\n",
+    "    this reduces our search space to only O(n), but we spend O(nlogn) time sorting it. can still be improved\n",
+    "\n",
+    "    the sort is \"inplace\" and thus, we don't need any extra memory\n",
     "'''"
    ]
   },
@@ -218,35 +230,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nrather than sorting it, we can take advantage of a native Python function -> set()\\n\\nO(n) looping through the array to convert it into a set.\\n\\nafterwards, O(1) to check if the length of the set is the same as the length of original.\\n\\nif is it, return False; else return True.\\n\\nfirstly, this strategy removes the nlogn sort time.\\nnext, we can transform the array (using O(n) time) into another structure that gives us insight\\nlastly, we can reduce our search time to O(1) when we compare the lengths of these structures\\n'"
+       "\"\\nCONCEPT\\n    another clever solution would be to take advnatage of other types of data we have: the length of the list.\\n    observe how if we were to have a list of only unique values, it would always be equal to or shorter than the length of the same list without the guarentee of unique values.\\n\\n    in other words, if we were to have a list (unknown if duplicates) and the same list that for sure did not have duplicates, we could simply compare their lengths\\n\\nIMPL\\nrather than sorting it, we can take advantage of a native Python function -> set()\\n\\nO(n) looping through the array to convert it into a set.\\n\\nafterwards, O(1) to check if the length of the set is the same as the length of original.\\n\\nif is it, return False; else return True.\\n\\nfirstly, this strategy removes the nlogn sort time.\\nnext, we can transform the array (using O(n) time) into another structure that gives us insight\\nlastly, we can reduce our search time to O(1) when we compare the lengths of these structures\\n\\nregarding memory, we need to create the set, so we'll use O(n) extra memory worst case, and best case is just O(1) -> eg [1,1,1,1,1,1,1,1]\\n\""
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "'''\n",
-    "rather than sorting it, we can take advantage of a native Python function -> set()\n",
+    "CONCEPT\n",
+    "    another clever solution would be to take advnatage of other types of data we have: the length of the list.\n",
+    "    observe how if we were to have a list of only unique values, it would always be equal to or shorter than the length of the same list without the guarentee of unique values.\n",
     "\n",
-    "O(n) looping through the array to convert it into a set.\n",
+    "    in other words, if we were to have a list (unknown if duplicates) and the same list that for sure did not have duplicates, we could simply compare their lengths\n",
     "\n",
-    "afterwards, O(1) to check if the length of the set is the same as the length of original.\n",
+    "IMPLEMENTATION:\n",
+    "    rather than sorting it, we can take advantage of a native Python function -> set()\n",
     "\n",
-    "if is it, return False; else return True.\n",
+    "    O(n) looping through the array to convert it into a set.\n",
     "\n",
-    "firstly, this strategy removes the nlogn sort time.\n",
-    "next, we can transform the array (using O(n) time) into another structure that gives us insight\n",
-    "lastly, we can reduce our search time to O(1) when we compare the lengths of these structures\n",
+    "    afterwards, O(1) to check if the length of the set is the same as the length of original.\n",
     "\n",
-    "regarding memory, we need to create the set, so we'll use O(n) extra memory worst case, and best case is just O(1) -> eg [1,1,1,1,1,1,1,1]\n",
+    "    if is it, return False; else return True.\n",
+    "\n",
+    "ANALYSIS\n",
+    "    firstly, this strategy removes the nlogn sort time.\n",
+    "    next, we can transform the array (using O(n) time) into another structure that gives us insight\n",
+    "    lastly, we can reduce our search time to O(1) when we compare the lengths of these structures\n",
+    "\n",
+    "    regarding memory, we need to create the set, so we'll use O(n) extra memory worst case, and best case is just O(1) -> eg [1,1,1,1,1,1,1,1]\n",
     "'''"
    ]
   },
@@ -300,13 +320,14 @@
    ],
    "source": [
     "'''\n",
-    "we can make a minor improvement by tweaking to the code to stop early if it doesnt need to traverse the whole nums array\n",
+    "IMPLEMENTATION\n",
+    "    we can make a minor improvement by tweaking to the code to stop early if it doesnt need to traverse the whole nums array\n",
     "\n",
-    "the issue with the above solution is that it will always recreate the set, which in turn will always take O(n) runtime.\n",
+    "    the issue with the above solution is that it will always recreate the set, which in turn will always take O(n) runtime.\n",
     "\n",
-    "we can improve upon this manually coding the creation of the set ourselves. this way, we can add an early break in the code if we identify a duplicate before the entire completion of the set\n",
+    "    we can improve upon this manually coding the creation of the set ourselves. this way, we can add an early break in the code if we identify a duplicate before the entire completion of the set\n",
     "\n",
-    "the memory remains the same as the above\n",
+    "    the memory remains the same as the above\n",
     "'''"
    ]
   },
