--- a/1. NeetCode/A. Arrays & Hasing/2.[easy]valid_anagram.ipynb
+++ b/1. NeetCode/A. Arrays & Hasing/2.[easy]valid_anagram.ipynb
@@ -69,6 +69,8 @@
     "Constraints:\n",
     "1 <= s.length, t.length <= 5 * 104\n",
     "s and t consist of lowercase English letters.\n",
+    "\n",
+    "Follow up: What if the inputs contain Unicode characters? How would you adapt your solution to such a case?\n",
     "'''"
    ]
   },
@@ -156,15 +158,21 @@
    ],
    "source": [
     "'''\n",
-    "observe that from the problem statement, we just need to check if the second string t shares the anagram letters with s, not whether s makes a word.\n",
+    "CONCEPT\n",
+    "    observe that from the problem statement, we just need to check if the second string t shares the anagram letters with s, not whether s makes a word.\n",
     "\n",
-    "another way to put it, we don't care if s is \"abcd\" and not a word, we just care that t is some permutation of \"abcd\"\n",
+    "    another way to put it, we don't care if s is \"abcd\" and not a word, we just care that t is some permutation of \"abcd\"\n",
     "\n",
-    "with this in mind, the brute force solution would be to iterate through s, and on every chr, check to see if that chr exists bijectively in t.\n",
+    "    with this in mind, the brute force solution would be to iterate through s, and on every chr, check to see if that chr exists bijectively in t.\n",
     "\n",
-    "the moment we don't find a chr, return false. if we make it through the double loop, return true.\n",
+    "IMPLEMENTATION\n",
+    "    the most direct way do this comprehensive check would be to use a double for-loop.\n",
+    "    the first loop reaches every letter, and for every letter, the second loop reaches every other letter\n",
+    "    the moment we don't find a chr, return false. if we make it through the double loop, return true.\n",
     "\n",
-    "we are doing a comparison between the strings, and thus, don't need extra memory\n",
+    "ANALYSIS\n",
+    "    if n is length of a word, and m is the length of the other word, for each n letters in the first word, we check m letters in the other word at worst. result is O(n*m)\n",
+    "    we are doing a comparison between the strings, and thus, don't need extra memory\n",
     "'''"
    ]
   },
@@ -193,18 +201,22 @@
    ],
    "source": [
     "'''\n",
-    "as mentioned above, we don't actually care about setting parameters of the what consistutes a word--we only need to double check if the chrs in string t have a bijective relationship with string s\n",
+    "CONCEPT\n",
+    "    as mentioned above, we don't actually care about setting parameters of the what consistutes a word--we only need to double check if the chrs in string t have a bijective relationship with string s\n",
     "\n",
-    "one of the easiest case of this bijective comparison would be to sort both strings, since it ensures the same types of relationships between each chr\n",
+    "    one of the easiest case of this bijective comparison would be to sort both strings, since it ensures the same types of relationships between each chr\n",
     "\n",
-    "notice how in this case, if the strs are anagrams, a sort would actually return the same two strings at the end, in which we can just check if they were equal to establish that bijective rleationship\n",
+    "    notice how in this case, if the strs are anagrams, a sort would actually return the same two strings at the end, in which we can just check if they were equal to establish that bijective rleationship\n",
     "\n",
-    "thus, sort both, and if they return the same string, return true.\n",
+    "IMPLEMENTATION\n",
+    "    thus, sort both, and if they return the same string, return true.\n",
     "\n",
-    "NOTE on edge cases:\n",
-    "the strings could be different lengths. we know to immediately return false in this case because there would be no bijective relationship.\n",
+    "    NOTE on edge cases:\n",
+    "    the strings could be different lengths. we know to immediately return false in this case because there would be no bijective relationship.\n",
     "\n",
-    "regarding memory, since we are sorting inplace, we don't need next memory here either\n",
+    "ANALYSIS\n",
+    "    the best runtime for a sort would be O(nlogn) + O(mlogm), since we are sorting 2 strings. the compraison between the two sorted strings is O(1). summed up, runtime is within class of O(nlogn) \n",
+    "    regarding memory, since we are sorting inplace, we don't need next memory here either\n",
     "'''"
    ]
   },
@@ -257,12 +269,21 @@
    ],
    "source": [
     "'''\n",
-    "rather than spending nlogn time to sort, we can improve about this by transforming each list into a freq dict, which will cost O(n)*2. \n",
+    "CONCEPT\n",
+    "    rather than spending nlogn time to sort, we can improve about this by transforming each list into a freq dict, which will cost O(n)*2. \n",
     "\n",
-    "specifically, we can iterate through both strings and keep the key of the chr and value of a list of both freqs.\n",
-    "eg. key = [freq of occurence in s, freq of occurence in t] \n",
+    "IMPLEMENTATION\n",
+    "    specifically, we can iterate through both strings and keep the key of the chr and value of a list of both freqs.\n",
+    "    eg. key = [freq of occurence in s, freq of occurence in t] \n",
     "\n",
-    "once we've created this dictionary, we just iterate thought the dictionary to check that both values in the list are the same.\n",
+    "    once we've created this dictionary, we just iterate thought the dictionary to check that both values in the list are the same.\n",
+    "\n",
+    "ANALYSIS\n",
+    "    O(n) + O(m) to transform both into the dictionaries\n",
+    "    O(n) worst case to iterate through the entire dictionary values, and the comparison of the values owuld be O(1)\n",
+    "    total runtime would be O(n + m)\n",
+    "\n",
+    "    in terms of space, the worst case for space would be the longer of the two strings' distinct values, so either O(n) or O(m) for the values of the dictionary\n",
     "'''"
    ]
   },
@@ -290,6 +311,26 @@
     "        if freq[i][0] != freq[i][1]:\n",
     "            return False\n",
     "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Follow-Up: Unicode Characters in String?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "with the above dictionary solution that runs at O(n+m), unicode characters are dealt with in the same way.\n",
+    "\n",
+    "they are simply included in the key, regardless of what it actually is.\n",
+    "'''"
    ]
   },
   {
