--- a/1. NeetCode/A. Arrays & Hasing/3.[easy]two_sum.ipynb
+++ b/1. NeetCode/A. Arrays & Hasing/3.[easy]two_sum.ipynb
@@ -79,6 +79,8 @@
     "-109 <= target <= 109\n",
     "\n",
     "Only one valid answer exists.\n",
+    "\n",
+    "Follow-up: Can you come up with an algorithm that is less than O(n2) time complexity?\n",
     "'''"
    ]
   },
@@ -172,15 +174,19 @@
    ],
    "source": [
     "'''\n",
-    "brute force would be to check every single combination of ints within nums\n",
-    "nC2 = n! / 2!(n-2)! = (n * (n-1)) / 2 = (n2 - n) / 2 total combinations\n",
+    "CONCEPT\n",
+    "    brute force would be to check every single combination of ints within nums\n",
+    "    nC2 = n! / 2!(n-2)! = (n * (n-1)) / 2 = (n2 - n) / 2 total combinations\n",
     "\n",
-    "we can generate this sample space by using a double for-loop:\n",
-    "for each int in nums, compare with every int after the current num.\n",
+    "IMPLEMENTATION\n",
+    "    we can generate this sample space by using a double for-loop:\n",
+    "    for each int in nums, compare with every int after the current num.\n",
     "\n",
-    "at the end, if none of them add up to target, return false\n",
+    "    at the end, if none of them add up to target, return false\n",
     "\n",
-    "runtime would be within class of O(n2), and since its just comparison, dont use extra memory\n",
+    "ANALYSIS\n",
+    "    runtime would be within class of O(n2), since we're touching (n2 - n) / 2 total combinations\n",
+    "    since its just comparison, dont use extra memory\n",
     "'''"
    ]
   },
@@ -209,36 +215,38 @@
    ],
    "source": [
     "'''\n",
-    "the issue with checking every combination is that we're doing a lot of recalculations and needless calculations.\n",
+    "CONCEPT\n",
+    "    the issue with checking every combination is that we're doing a lot of recalculations and needless calculations.\n",
     "\n",
-    "for eg. if target is 10, and one of our pairs of combinations is (1,4) = 5, we DEFINITELY know we don't need to check (1,3) or (1,2) or (1,1) etc. since we know this would for sure be lower than the target.\n",
+    "    for eg. if target is 10, and one of our pairs of combinations is (1,4) = 5, we DEFINITELY know we don't need to check (1,3) or (1,2) or (1,1) etc. since we know this would for sure be lower than the target.\n",
     "\n",
-    "thus, we can improve our sample space by introducing some sort of logic that will help determine which next pair we should check.\n",
+    "    thus, we can improve our sample space by introducing some sort of logic that will help determine which next pair we should check.\n",
     "\n",
-    "observe how by sorting nums in ascending order, we estbalish an ordering between the numbers that the mentioned above logic can act on.\n",
+    "IMPLEMENTATION\n",
+    "    observe how by sorting nums in ascending order, we estbalish an ordering between the numbers that the mentioned above logic can act on.\n",
     "\n",
-    "we can start calulcating the sum as such:\n",
-    "take the leftmost (smallest int) and rightmost (biggest int) and add them together.\n",
+    "    we can start calulcating the sum as such:\n",
+    "    take the leftmost (smallest int) and rightmost (biggest int) and add them together.\n",
     "\n",
-    "if our current sum is larger than the target, we know we need to reduce at least one of the compoenents of our pair (which the only component that could be reduced is our biggest int).\n",
-    "thus, we can shift the rightmost pointer down to slot ot the 2nd-rightmost int--the 2nd largest number.\n",
+    "    if our current sum is larger than the target, we know we need to reduce at least one of the compoenents of our pair (which the only component that could be reduced is our biggest int).\n",
+    "    thus, we can shift the rightmost pointer down to slot ot the 2nd-rightmost int--the 2nd largest number.\n",
     "\n",
-    "we know determinstically that this sum will bring us one step closer to the target without ever \"overshooting\" (aka, this new sum will either give us our target OR it will always be larger than our target and thus we\n",
-    "never need to backtrack). these features are implied from using the 2nd largest number, and sorting ensures that when we decrement the rightmost pointer, we always get the 2nd largest number\n",
+    "    we know determinstically that this sum will bring us one step closer to the target without ever \"overshooting\" (aka, this new sum will either give us our target OR it will always be larger than our target and thus we\n",
+    "    never need to backtrack). these features are implied from using the 2nd largest number, and sorting ensures that when we decrement the rightmost pointer, we always get the 2nd largest number\n",
     "\n",
-    "on the flip side, if our sum is smaller than the target, we can increment the pointer of our leftmost int to the 2nd smallest int for the same line of reasoning as above.\n",
+    "    on the flip side, if our sum is smaller than the target, we can increment the pointer of our leftmost int to the 2nd smallest int for the same line of reasoning as above.\n",
     "\n",
-    "if we traverse the whole list, going inwards from both sides aka O(n) time cost and we dont find the sum, then there is never a valid solutin. we reach this point once the pointers cross one another.\n",
+    "    if we traverse the whole list, going inwards from both sides aka O(n) time cost and we dont find the sum, then there is never a valid solutin. we reach this point once the pointers cross one another.\n",
     "\n",
-    "once we found the target and the indexes within the sorted nums list, we need to retrieve the original index of these numbers.\n",
+    "    once we found the target and the indexes within the sorted nums list, we need to retrieve the original index of these numbers.\n",
     "\n",
-    "we can do so with a built-in index position\n",
-    "NOTE: index will return the first occurence of an item, so if the list is [3,3] target = 6, it will return [0,0] instead of the expected [0,1]\n",
-    "we can solve this by coding in a manual search of another O(n)\n",
+    "    we can do so with a built-in index position\n",
+    "    NOTE: index will return the first occurence of an item, so if the list is [3,3] target = 6, it will return [0,0] instead of the expected [0,1]\n",
+    "    we can solve this by coding in a manual search of another O(n)\n",
     "\n",
-    "overall, runtime is O(nlogn) + O(n) + O(n) for the indexing\n",
-    "\n",
-    "our memory is O(n) because we are storing the sorted nums alongside the original.\n",
+    "ANALYSIS\n",
+    "    overall, runtime is O(nlogn) + O(n) + O(n) for the indexing\n",
+    "    our memory is O(n) because we are storing the sorted nums alongside the original.\n",
     "'''"
    ]
   },
@@ -296,15 +304,19 @@
    ],
    "source": [
     "'''\n",
-    "we can actually skip the cost of sorting entirely by transofrming the list into a dictionary, which will help us locate our required values faster.\n",
+    "CONCEPT\n",
+    "    we can actually skip the cost of sorting entirely by transofrming the list into a dictionary, which will help us locate our required values faster.\n",
     "\n",
-    "transforimg will cost O(n) time worst case, as we're iterating through nums to do our check.\n",
+    "    transforimg will cost O(n) time worst case, as we're iterating through nums to do our check.\n",
     "\n",
-    "as we iterate through, on every int, we can take target - curr_int to calculate the required complement to our curr_int to make up target.\n",
+    "IMPLEMENTATION\n",
+    "    as we iterate through, on every int, we can take target - curr_int to calculate the required complement to our curr_int to make up target.\n",
     "\n",
-    "if this complement exists in our dictionary, we can spend O(1) to instantly return that value's index and our current index. otherwise, store the curr_int and its index position into the dictionary.\n",
+    "    if this complement exists in our dictionary, we can spend O(1) to instantly return that value's index and our current index. otherwise, store the curr_int and its index position into the dictionary.\n",
     "\n",
-    "the memory of this would be O(n), since we are creating a dictionary. \n",
+    "ANALYSIS\n",
+    "    total runtime, as mentioned above, will sum up to O(n) + O(1) = O(n)\n",
+    "    the memory of this would be O(n), since we are creating a dictionary. \n",
     "'''"
    ]
   },
@@ -322,6 +334,24 @@
     "        else:\n",
     "            postition_dict[e] = i\n",
     "    return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Follow-up: Faster than O(n2)?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "addressed, since we have a solution at O(n)\n",
+    "'''"
    ]
   },
   {
